# rgb-controller

./: Cargo.toml  README.md  install.sh
src/: config.rs  configuration.rs  main.rs  shared.rs
src/presets/: cycling.rs  default_blinks.rs  mod.rs
