[package]
name = "rgb-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openrgb = { version = "0.1.2" }
tokio = { version = "1.36.0", features = ["full"]}
ctrlc = "3.4.2"
hsv = "0.1.1"
rand = "0.8.5"
toml = { version = "0.8.19", features = ["parse"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
dirs = "5.0.1"
serde = { version = "1.0.208", features = ["derive"] }
